웹소켓 수정 롤백